[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/Fonts/UI-Font8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Tooltip.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Fonts/TitleUI-Font8.tres" type="DynamicFont" id=3]

[node name="Tooltip" type="Panel"]
anchor_left = 0.25
anchor_top = 0.794
anchor_right = 0.75
anchor_bottom = 1.0
margin_top = 0.0799947
margin_right = -1.90735e-05
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_left = 0.031
anchor_top = 0.135
anchor_right = 0.969
anchor_bottom = 0.946
margin_left = 0.0399998
margin_top = 0.0049998
margin_right = -0.0400066
margin_bottom = -0.00200146
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 149.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
margin_right = 149.0
margin_bottom = 8.0

[node name="Name" type="Label" parent="Margin/VBox/HBox"]
margin_right = 72.0
margin_bottom = 8.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Gold"

[node name="Type" type="Label" parent="Margin/VBox/HBox"]
margin_left = 76.0
margin_right = 149.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Currency"
align = 2

[node name="Spacer" type="MarginContainer" parent="Margin/VBox"]
margin_top = 12.0
margin_right = 149.0
margin_bottom = 12.0

[node name="HBox2" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 16.0
margin_right = 149.0
margin_bottom = 29.0
size_flags_vertical = 3

[node name="Text" type="RichTextLabel" parent="Margin/VBox/HBox2"]
margin_right = 149.0
margin_bottom = 13.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0.733333, 0.733333, 0.733333, 1 )
text = "Use to purchase things"
scroll_active = false

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.031
anchor_top = 0.514
anchor_right = 1.225
anchor_bottom = 0.892
margin_left = 0.0399971
margin_top = -0.018
margin_right = -3.8147e-06
margin_bottom = -0.00400072
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.847059, 0.521569, 1 )
text = "DROP"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
visible = false
anchor_left = 1.031
anchor_right = 1.225
anchor_bottom = 0.401
margin_left = 0.0560036
margin_top = 0.832489
margin_right = 0.0160027
margin_bottom = -0.00450039
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.847059, 0.521569, 1 )
disabled = true
text = "TAKE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel2/Button2" to="." method="_on_Button2_pressed"]
